Fixed broken scrollbar on chrome

--- a/style/style.scss
+++ b/style/style.scss
@@ -20,6 +20,7 @@ html,body {
     bottom: 0;
     left: 0;
     overflow: auto;
+    z-index: 101;
     ul {
         margin: 0;
         padding: 0;
